samples/_failures_safe/1761179018_f27ab9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2d9d6bd.c: In function ‘main’:
./samples/SAFE/__tmp_c2d9d6bd.c:162:5: error: ‘read’ undeclared (first use in this function); did you mean ‘fread’?
  162 |     read
      |     ^~~~
      |     fread
./samples/SAFE/__tmp_c2d9d6bd.c:162:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c2d9d6bd.c:162:9: error: expected ‘;’ at end of input
  162 |     read
      |         ^
      |         ;
./samples/SAFE/__tmp_c2d9d6bd.c:162:5: error: expected declaration or statement at end of input
  162 |     read
      |     ^~~~
